fix: code cleanup, added new reactor and merged reactors to form new ones