@@ -4,10 +4,11 @@ import java.io.File;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 
 import org.apache.hc.client5.http.classic.methods.HttpPost;
 import org.apache.hc.client5.http.entity.mime.FileBody;
@@ -30,11 +31,11 @@ import com.google.gson.ToNumberPolicy;
 import prerna.sablecc2.om.execptions.SemossPixelException;
 import prerna.security.HttpHelperUtility;
 
-
 public final class JiraHelper {
 	// Logger
 	private static final Logger classLogger = LogManager.getLogger(JiraHelper.class);
-	// Gson instance for JSON serialization/deserialization with specific configurations
+	// Gson instance for JSON serialization/deserialization with specific
+	// configurations
 	private static final Gson GSON = new GsonBuilder().disableHtmlEscaping()
 			.setObjectToNumberStrategy(ToNumberPolicy.LONG_OR_DOUBLE).create();
 	// ObjectMapper instance for JSON parsing
@@ -43,32 +44,46 @@ public final class JiraHelper {
 	// Jira REST paths
 	private static final String API_PATH_ISSUE = "/rest/api/3/issue";
 	private static final String API_PATH_PROJECT = "/rest/api/3/project";
+	private static final String API_PATH_CREATEMETA = "/rest/api/3/issue/createmeta";
+	private static final String API_PATH_SEARCH = "/rest/api/3/search/jql";
+	private static final String API_PATH_ISSUETYPE = "/rest/api/3/issuetype";
+	private static final String API_PATH_ISSUETYPE_PROJECT = "/rest/api/3/issuetype/project";
+	private static final String API_PATH_ISSUELINK = "/rest/api/3/issueLink";
+	private static final String API_PATH_ISSUELINKTYPE = "/rest/api/3/issueLinkType";
+	private static final String API_PATH_ATTACHMENT = "/rest/api/3/attachment";
+	private static final String API_PATH_PRIORITY = "/rest/api/3/priority";
+	private static final String API_PATH_ASSIGNABLE_USERS = "/rest/api/3/user/assignable/search";
 	private static final String API_SUFFIX_COMMENT = "/comment";
 	private static final String API_SUFFIX_TRANSITIONS = "/transitions";
+	private static final String API_SUFFIX_WORKLOG = "/worklog";
+	private static final String API_SUFFIX_ASSIGNEE = "/assignee";
+	private static final String API_SUFFIX_ATTACHMENTS = "/attachments";
+	private static final String API_SUFFIX_EDITMETA = "/editmeta";
 
 	// Jira entity field keys
 	private static final String FIELD_ACCOUNT_ID = "accountId";
 	private static final String FIELD_ASSIGNEE = "assignee";
+	private static final String FIELD_ATTACHMENT_ID = "attachmentId";
 	private static final String FIELD_AUTHOR = "author";
 	private static final String FIELD_BODY = "body";
 	private static final String FIELD_COMMENT = "comment";
+	private static final String FIELD_COMMENT_ID = "commentId";
 	private static final String FIELD_COMMENTS = "comments";
+	private static final String FIELD_CONTENT_URL = "contentUrl";
 	private static final String FIELD_CREATED = "created";
 	private static final String FIELD_DESCRIPTION = "description";
 	private static final String FIELD_DISPLAY_NAME = "displayName";
-	private static final String FIELD_DUE_DATE = "duedate";
 	private static final String FIELD_ID = "id";
-	private static final String FIELD_ISSUE_TYPE = "issuetype";
+	private static final String FIELD_ISSUE_TYPE_ID = "issuetypeid";
+	private static final String FIELD_JIRA_ID = "jiraid";
 	private static final String FIELD_KEY = "key";
-	private static final String FIELD_LABELS = "labels";
-	private static final String FIELD_LEAD = "lead";
+	private static final String FIELD_LINK_TYPE = "linkType";
 	private static final String FIELD_NAME = "name";
-	private static final String FIELD_PRIORITY = "priority";
 	private static final String FIELD_PROJECT = "project";
-	private static final String FIELD_SELF = "self";
-	private static final String FIELD_STATUS = "status";
-	private static final String FIELD_SUMMARY = "summary";
 	private static final String FIELD_TO = "to";
+	private static final String FIELD_WORKLOG_ID = "worklogId";
+
+	private static final String FIELD_ENVIRONMENT = "environment";
 
 	// Search and workflow field keys
 	private static final String FIELD_FIELDS = "fields";
@@ -77,7 +92,6 @@ public final class JiraHelper {
 	private static final String FIELD_MAX_RESULTS = "maxResults";
 	private static final String FIELD_NEXT_PAGE_TOKEN = "nextPageToken";
 	private static final String FIELD_SUCCESS = "success";
-	private static final String FIELD_TRANSITION = "transition";
 	private static final String FIELD_TRANSITIONS = "transitions";
 
 	// Atlassian Document Format (ADF) type keys
@@ -89,7 +103,7 @@ public final class JiraHelper {
 	private static final String DEFAULT_UNASSIGNED = "Unassigned";
 
 	private JiraHelper() {
-		
+
 	}
 
 	/**
@@ -97,12 +111,12 @@ public final class JiraHelper {
 	 *
 	 * @param accessToken Jira OAuth access token
 	 * @param baseUrl     Jira API base URL including cloud ID
-	 * @return list of maps, each containing {@code id}, {@code key}, {@code name},
-	 *         {@code projectTypeKey}, and {@code lead}
+	 * @return list of maps, each containing {@code id}, {@code project},
+	 *         {@code name}, {@code projectTypeKey}, and {@code lead}
 	 */
 	public static List<Map<String, Object>> getAllProjects(String accessToken, String baseUrl) {
+		final String projectTypeKey = "projectTypeKey";
 		try {
-			final String projectTypeKey = "projectTypeKey";
 			validateJiraContext(accessToken, baseUrl);
 			Map<String, String> headers = buildHeaders(accessToken);
 			String response = HttpHelperUtility.getRequest(baseUrl + API_PATH_PROJECT, headers, null, null, null);
@@ -112,16 +126,13 @@ public final class JiraHelper {
 			for (JsonNode p : projectArray) {
 				Map<String, Object> proj = new HashMap<>();
 				proj.put(FIELD_ID, p.path(FIELD_ID).asText());
-				proj.put(FIELD_KEY, p.path(FIELD_KEY).asText());
+				proj.put(FIELD_PROJECT, p.path(FIELD_KEY).asText());
 				proj.put(FIELD_NAME, p.path(FIELD_NAME).asText());
 				proj.put(projectTypeKey, p.path(projectTypeKey).asText());
-				if (p.has(FIELD_LEAD)) {
-					proj.put(FIELD_LEAD, p.path(FIELD_LEAD).path(FIELD_DISPLAY_NAME).asText());
-				}
+				proj.put("lead", p.path("lead").path(FIELD_DISPLAY_NAME).asText(""));
 				projects.add(proj);
 			}
 			return projects;
-
 		} catch (SemossPixelException e) {
 			throw e;
 		} catch (Exception e) {
@@ -137,24 +148,21 @@ public final class JiraHelper {
 	 * @param baseUrl     Jira API base URL including cloud ID
 	 * @param projectKey  optional project key to scope issue types; pass
 	 *                    {@code null} for all instance issue types
-	 * @return list of maps, each containing {@code id}, {@code name}, and
+	 * @return list of maps, each containing {@code issuetypeid}, {@code name}, and
 	 *         {@code subtask}
 	 */
 	public static List<Map<String, Object>> getIssueTypes(String accessToken, String baseUrl, String projectKey) {
+		final String subtask = "subtask";
 		try {
-			final String jiraIssueTypeUrl = "/rest/api/3/issuetype/project";
-			final String jiraIssueTypeGlobalUrl = "/rest/api/3/issuetype";
-			final String subtask = "subtask";
 			validateJiraContext(accessToken, baseUrl);
 			Map<String, String> headers = buildHeaders(accessToken);
 			String url;
 
 			if (projectKey != null && !projectKey.trim().isEmpty()) {
 				String projectId = resolveProjectId(baseUrl, accessToken, projectKey);
-				url = baseUrl + jiraIssueTypeUrl + "?projectId="
-						+ URLEncoder.encode(projectId, StandardCharsets.UTF_8);
+				url = baseUrl + API_PATH_ISSUETYPE_PROJECT + "?projectId=" + URLEncoder.encode(projectId, StandardCharsets.UTF_8);
 			} else {
-				url = baseUrl + jiraIssueTypeGlobalUrl;
+				url = baseUrl + API_PATH_ISSUETYPE;
 			}
 
 			String response = HttpHelperUtility.getRequest(url, headers, null, null, null);
@@ -163,13 +171,12 @@ public final class JiraHelper {
 			List<Map<String, Object>> types = new ArrayList<>();
 			for (JsonNode t : typeArray) {
 				Map<String, Object> type = new HashMap<>();
-				type.put(FIELD_ID, t.path(FIELD_ID).asText());
+				type.put(FIELD_ISSUE_TYPE_ID, t.path(FIELD_ID).asText());
 				type.put(FIELD_NAME, t.path(FIELD_NAME).asText());
 				type.put(subtask, t.path(subtask).asBoolean(false));
 				types.add(type);
 			}
 			return types;
-
 		} catch (SemossPixelException e) {
 			throw e;
 		} catch (Exception e) {
@@ -186,18 +193,16 @@ public final class JiraHelper {
 	 * @param baseUrl     Jira API base URL including cloud ID
 	 * @param projectKey  project key to search assignable users for
 	 * @param query       optional search string to filter users by name or email
-	 * @return list of maps, each containing {@code accountId}, {@code displayName},
+	 * @return list of maps, each containing {@code assignee}, {@code displayName},
 	 *         and {@code emailAddress}
 	 */
 	public static List<Map<String, Object>> getAssignableUsers(String accessToken, String baseUrl, String projectKey,
 			String query) {
+		final String emailAddress = "emailAddress";
 		try {
-			final String jiraAssignableUserUrl = "/rest/api/3/user/assignable/search";
-			final String emailAddress = "emailAddress";
 			validateJiraContext(accessToken, baseUrl);
-			validateRequiredString(projectKey, "Project key");
 			Map<String, String> headers = buildHeaders(accessToken);
-			StringBuilder url = new StringBuilder(baseUrl).append(jiraAssignableUserUrl).append("?project=")
+			StringBuilder url = new StringBuilder(baseUrl).append(API_PATH_ASSIGNABLE_USERS).append("?project=")
 					.append(URLEncoder.encode(projectKey, StandardCharsets.UTF_8));
 			if (query != null && !query.trim().isEmpty()) {
 				url.append("&query=").append(URLEncoder.encode(query, StandardCharsets.UTF_8));
@@ -208,13 +213,12 @@ public final class JiraHelper {
 			List<Map<String, Object>> users = new ArrayList<>();
 			for (JsonNode u : userArray) {
 				Map<String, Object> userMap = new HashMap<>();
-				userMap.put(FIELD_ACCOUNT_ID, u.path(FIELD_ACCOUNT_ID).asText());
+				userMap.put(FIELD_ASSIGNEE, u.path(FIELD_ACCOUNT_ID).asText());
 				userMap.put(FIELD_DISPLAY_NAME, u.path(FIELD_DISPLAY_NAME).asText());
 				userMap.put(emailAddress, u.path(emailAddress).asText(""));
 				users.add(userMap);
 			}
 			return users;
-
 		} catch (SemossPixelException e) {
 			throw e;
 		} catch (Exception e) {
@@ -232,12 +236,11 @@ public final class JiraHelper {
 	 * @return list of maps, each containing {@code id} and {@code name}
 	 */
 	public static List<Map<String, Object>> getPriorities(String accessToken, String baseUrl) {
+		final String values = "values";
 		try {
-			final String jiraPriorityUrl = "/rest/api/3/priority";
-			final String values = "values";
 			validateJiraContext(accessToken, baseUrl);
 			Map<String, String> headers = buildHeaders(accessToken);
-			String response = HttpHelperUtility.getRequest(baseUrl + jiraPriorityUrl, headers, null, null, null);
+			String response = HttpHelperUtility.getRequest(baseUrl + API_PATH_PRIORITY, headers, null, null, null);
 
 			JsonNode root = OBJECT_MAPPER.readTree(response);
 			JsonNode priorityArray = root.isArray() ? root : root.path(values);
@@ -250,7 +253,6 @@ public final class JiraHelper {
 				priorities.add(priority);
 			}
 			return priorities;
-
 		} catch (SemossPixelException e) {
 			throw e;
 		} catch (Exception e) {
@@ -260,65 +262,19 @@ public final class JiraHelper {
 	}
 
 	/**
-	 * Lists Jira issues for a project with optional filters and pagination.
-	 *
-	 * @param accessToken    Jira OAuth access token
-	 * @param baseUrl        Jira API base URL including cloud ID
-	 * @param projectKey     project key to list issues for
-	 * @param statusFilter   optional status filter
-	 * @param assigneeFilter optional assignee account ID filter
-	 * @param priorityFilter optional priority name filter
-	 * @param nextPageToken  optional pagination token from a previous response
-	 * @param maxResults     maximum number of results per page
-	 * @return map containing {@code issues}, {@code isLast}, {@code maxResults},
-	 *         and optionally {@code nextPageToken}
-	 */
-	public static Map<String, Object> listIssues(String accessToken, String baseUrl, String projectKey,
-			String statusFilter, String assigneeFilter, String priorityFilter, String nextPageToken, int maxResults) {
-		try {
-			validateJiraContext(accessToken, baseUrl);
-			validateRequiredString(projectKey, "Project key");
-			StringBuilder jql = new StringBuilder("project = \"").append(JiraUtils.escapeJqlString(projectKey)).append("\"");
-			if (statusFilter != null && !statusFilter.trim().isEmpty()) {
-				jql.append(" AND status = \"").append(JiraUtils.escapeJqlString(statusFilter)).append("\"");
-			}
-			if (assigneeFilter != null && !assigneeFilter.trim().isEmpty()) {
-				jql.append(" AND assignee = \"").append(JiraUtils.escapeJqlString(assigneeFilter)).append("\"");
-			}
-			if (priorityFilter != null && !priorityFilter.trim().isEmpty()) {
-				jql.append(" AND priority = \"").append(JiraUtils.escapeJqlString(priorityFilter)).append("\"");
-			}
-			jql.append(" ORDER BY created DESC");
-
-			return executeJqlSearch(accessToken, baseUrl, jql.toString(), nextPageToken, maxResults);
-
-		} catch (SemossPixelException e) {
-			throw e;
-		} catch (Exception e) {
-			classLogger.error("Error in listIssues for '{}': {}", projectKey, e.getMessage(), e);
-			throw new SemossPixelException(
-					"Failed to list issues for project '" + projectKey + "'. Error: " + e.getMessage());
-		}
-	}
-
-	/**
-	 * Runs an arbitrary JQL query against Jira with pagination.
+	 * Searches Jira issues using a raw JQL query string.
 	 *
 	 * @param accessToken   Jira OAuth access token
 	 * @param baseUrl       Jira API base URL including cloud ID
-	 * @param jql           JQL query string
+	 * @param jql           raw JQL query string
 	 * @param nextPageToken optional pagination token from a previous response
 	 * @param maxResults    maximum number of results per page
-	 * @return map containing paginated issue list with total count
+	 * @return map containing paginated issue list
 	 */
-	public static Map<String, Object> searchIssues(String accessToken, String baseUrl, String jql,
-			String nextPageToken, int maxResults) {
+	public static Map<String, Object> searchIssues(String accessToken, String baseUrl,
+			String jql, String nextPageToken, int maxResults) {
 		try {
-			if (jql == null || jql.trim().isEmpty()) {
-				throw new SemossPixelException("JQL query string is required.");
-			}
 			return executeJqlSearch(accessToken, baseUrl, jql, nextPageToken, maxResults);
-
 		} catch (SemossPixelException e) {
 			throw e;
 		} catch (Exception e) {
@@ -333,261 +289,31 @@ public final class JiraHelper {
 	 * @param accessToken Jira OAuth access token
 	 * @param baseUrl     Jira API base URL including cloud ID
 	 * @param issueKey    issue key (for example, {@code PROJECT-123})
-	 * @return map containing issue fields
+	 * @return map containing {@code id}, {@code jiraid}, and {@code fields}
 	 */
+	@SuppressWarnings("unchecked")
 	public static Map<String, Object> readTicket(String accessToken, String baseUrl, String issueKey) {
 		try {
-			final String assigneeAccountId = "assigneeAccountId";
-			final String reporter = "reporter";
-			final String created = "created";
-			final String updated = "updated";
-			final String resolution = "resolution";
-			final String parentKey = "parentKey";
 			validateJiraContext(accessToken, baseUrl);
-			validateRequiredString(issueKey, "Issue key");
 			Map<String, String> headers = buildHeaders(accessToken);
-			String response = HttpHelperUtility.getRequest(baseUrl + API_PATH_ISSUE + "/" + issueKey, headers, null,
-					null, null);
+			String response = HttpHelperUtility.getRequest(
+					baseUrl + API_PATH_ISSUE + "/" + URLEncoder.encode(issueKey, StandardCharsets.UTF_8),
+					headers, null, null, null);
 
 			JsonNode root = OBJECT_MAPPER.readTree(response);
-			JsonNode f = root.path(FIELD_FIELDS);
-
 			Map<String, Object> ticket = new HashMap<>();
 			ticket.put(FIELD_ID, root.path(FIELD_ID).asText());
-			ticket.put(FIELD_KEY, root.path(FIELD_KEY).asText());
-			ticket.put(FIELD_SELF, root.path(FIELD_SELF).asText());
-			ticket.put(FIELD_SUMMARY, f.path(FIELD_SUMMARY).asText());
-			ticket.put(FIELD_STATUS, f.path(FIELD_STATUS).path(FIELD_NAME).asText());
-			ticket.put(FIELD_PRIORITY, f.path(FIELD_PRIORITY).path(FIELD_NAME).asText());
-			ticket.put(FIELD_ISSUE_TYPE, f.path(FIELD_ISSUE_TYPE).path(FIELD_NAME).asText());
-			ticket.put(FIELD_ASSIGNEE, f.path(FIELD_ASSIGNEE).path(FIELD_DISPLAY_NAME).asText(DEFAULT_UNASSIGNED));
-			ticket.put(assigneeAccountId, f.path(FIELD_ASSIGNEE).path(FIELD_ACCOUNT_ID).asText());
-			ticket.put(reporter, f.path(reporter).path(FIELD_DISPLAY_NAME).asText(""));
-			ticket.put(FIELD_DUE_DATE, f.path(FIELD_DUE_DATE).asText());
-			ticket.put(created, f.path(created).asText());
-			ticket.put(updated, f.path(updated).asText());
-			ticket.put(resolution, f.path(resolution).path(FIELD_NAME).asText(""));
-
-			// Parse labels into a proper list
-			JsonNode labelsNode = f.path(FIELD_LABELS);
-			List<String> labels = new ArrayList<>();
-			if (labelsNode.isArray()) {
-				for (JsonNode lbl : labelsNode) {
-					labels.add(lbl.asText());
-				}
+			ticket.put(FIELD_JIRA_ID, root.path(FIELD_KEY).asText());
+			JsonNode fieldsNode = root.path(FIELD_FIELDS);
+			if (fieldsNode.isObject()) {
+				ticket.put(FIELD_FIELDS, OBJECT_MAPPER.convertValue(fieldsNode, Map.class));
 			}
-			ticket.put(FIELD_LABELS, labels);
-
-			// Parent key for subtasks
-			JsonNode parentNode = f.path("parent");
-			if (!parentNode.isMissingNode() && !parentNode.isNull()) {
-				ticket.put(parentKey, parentNode.path(FIELD_KEY).asText());
-			}
-
-			// Parse issue links for unlink support
-			JsonNode issueLinksNode = f.path("issuelinks");
-			List<Map<String, Object>> issueLinks = new ArrayList<>();
-			if (issueLinksNode.isArray()) {
-				for (JsonNode link : issueLinksNode) {
-					Map<String, Object> linkMap = new HashMap<>();
-					linkMap.put(FIELD_ID, link.path(FIELD_ID).asText());
-					linkMap.put(ADF_TYPE, link.path(ADF_TYPE).path(FIELD_NAME).asText());
-					if (link.has("inwardIssue")) {
-						JsonNode inward = link.path("inwardIssue");
-						linkMap.put("direction", "inward");
-						linkMap.put("linkedIssueKey", inward.path(FIELD_KEY).asText());
-						linkMap.put("linkedIssueSummary", inward.path(FIELD_FIELDS).path(FIELD_SUMMARY).asText());
-						linkMap.put("linkedIssueStatus", inward.path(FIELD_FIELDS).path(FIELD_STATUS).path(FIELD_NAME).asText());
-					} else if (link.has("outwardIssue")) {
-						JsonNode outward = link.path("outwardIssue");
-						linkMap.put("direction", "outward");
-						linkMap.put("linkedIssueKey", outward.path(FIELD_KEY).asText());
-						linkMap.put("linkedIssueSummary", outward.path(FIELD_FIELDS).path(FIELD_SUMMARY).asText());
-						linkMap.put("linkedIssueStatus", outward.path(FIELD_FIELDS).path(FIELD_STATUS).path(FIELD_NAME).asText());
-					}
-					issueLinks.add(linkMap);
-				}
-			}
-			ticket.put("issuelinks", issueLinks);
-
-			ticket.put(FIELD_DESCRIPTION, parseAdfToPlainText(f.path(FIELD_DESCRIPTION)));
 			return ticket;
-
 		} catch (SemossPixelException e) {
 			throw e;
 		} catch (Exception e) {
 			classLogger.error("Error in readTicket '{}': {}", issueKey, e.getMessage(), e);
 			throw new SemossPixelException("Failed to retrieve issue '" + issueKey + "'. Error: " + e.getMessage());
-		}
-	}
-
-	/**
-	 * Creates a Jira issue with full field support.
-	 *
-	 * @param accessToken       Jira OAuth access token
-	 * @param baseUrl           Jira API base URL including cloud ID
-	 * @param projectKey        project key to create the issue in
-	 * @param summary           issue title
-	 * @param description       optional issue description
-	 * @param issueType         issue type name (for example, {@code Bug})
-	 * @param assigneeAccountId optional assignee account ID
-	 * @param priority          optional priority name
-	 * @param dueDate           optional due date in {@code YYYY-MM-DD} format
-	 * @param parentKey         optional parent issue key for subtasks
-	 * @param status            optional status to transition to after creation
-	 * @return map containing {@code id}, {@code key}, {@code self}, {@code summary},
-	 *         {@code success}, and optionally {@code status}
-	 */
-	@SuppressWarnings("unchecked")
-	public static Map<String, Object> createIssue(String accessToken, String baseUrl, String projectKey,
-			String summary, String description, String issueType, String assigneeAccountId, String priority,
-			String dueDate, String parentKey, String status) {
-		try {
-			final String parent = "parent";
-			validateJiraContext(accessToken, baseUrl);
-			validateRequiredString(projectKey, "Project key");
-			validateRequiredString(summary, "Summary");
-			validateRequiredString(issueType, "Issue type");
-			Map<String, String> headers = buildHeaders(accessToken);
-
-			Map<String, Object> fields = new HashMap<>();
-			fields.put(FIELD_PROJECT, Map.of(FIELD_KEY, projectKey));
-			fields.put(FIELD_SUMMARY, summary);
-			fields.put(FIELD_ISSUE_TYPE, Map.of(FIELD_NAME, issueType));
-
-			if (description != null && !description.trim().isEmpty()) {
-				fields.put(FIELD_DESCRIPTION, buildAdfDocument(description));
-			}
-			if (assigneeAccountId != null && !assigneeAccountId.trim().isEmpty()) {
-				fields.put(FIELD_ASSIGNEE, Map.of(FIELD_ACCOUNT_ID, assigneeAccountId));
-			}
-			if (priority != null && !priority.trim().isEmpty()) {
-				fields.put(FIELD_PRIORITY, Map.of(FIELD_NAME, priority));
-			}
-			if (dueDate != null && !dueDate.trim().isEmpty()) {
-				fields.put(FIELD_DUE_DATE, dueDate);
-			}
-			if (parentKey != null && !parentKey.trim().isEmpty()) {
-				fields.put(parent, Map.of(FIELD_KEY, parentKey));
-			}
-
-			String response = HttpHelperUtility.postRequestStringBody(baseUrl + API_PATH_ISSUE, headers,
-					GSON.toJson(Map.of(FIELD_FIELDS, fields)), ContentType.APPLICATION_JSON, null, null, null);
-			Map<String, Object> resp = GSON.fromJson(response, Map.class);
-
-			String createdKey = resp.get(FIELD_KEY) != null ? resp.get(FIELD_KEY).toString() : null;
-			String appliedStatus = null;
-			String statusWarning = null;
-			if (status != null && !status.trim().isEmpty() && createdKey != null) {
-				try {
-					appliedStatus = applyTransitionByName(baseUrl, accessToken, createdKey, status);
-					classLogger.info("Post-create transition applied for '{}': {}", createdKey, appliedStatus);
-				} catch (Exception te) {
-					statusWarning = "Issue created successfully but status transition to '"
-							+ status + "' failed: " + te.getMessage();
-					classLogger.warn(statusWarning, te);
-				}
-			}
-
-			Map<String, Object> result = new HashMap<>();
-			result.put(FIELD_ID, resp.get(FIELD_ID) != null ? resp.get(FIELD_ID).toString() : null);
-			result.put(FIELD_KEY, resp.get(FIELD_KEY) != null ? resp.get(FIELD_KEY).toString() : null);
-			result.put(FIELD_SELF, resp.get(FIELD_SELF) != null ? resp.get(FIELD_SELF).toString() : null);
-			result.put(FIELD_SUMMARY, summary);
-			result.put(FIELD_SUCCESS, true);
-			if (appliedStatus != null) {
-				result.put(FIELD_STATUS, appliedStatus);
-			}
-			if (statusWarning != null) {
-				result.put("statusWarning", statusWarning);
-			}
-			return result;
-
-		} catch (SemossPixelException e) {
-			throw e;
-		} catch (Exception e) {
-			classLogger.error("Error in createIssue: {}", e.getMessage(), e);
-			throw new SemossPixelException("Failed to create Jira issue. Error: " + e.getMessage());
-		}
-	}
-
-	/**
-	 * Updates fields for an existing Jira issue.
-	 *
-	 * @param accessToken       Jira OAuth access token
-	 * @param baseUrl           Jira API base URL including cloud ID
-	 * @param jiraId            issue key to update (for example, {@code PROJECT-123})
-	 * @param summary           optional new summary
-	 * @param description       optional new description
-	 * @param assigneeAccountId optional new assignee account ID
-	 * @param priority          optional new priority name
-	 * @param dueDate           optional new due date in {@code YYYY-MM-DD} format
-	 * @param status            optional status to transition to
-	 * @return map containing {@code key}, {@code success}, and optionally
-	 *         {@code status}
-	 */
-	public static Map<String, Object> updateIssue(String accessToken, String baseUrl, String jiraId, String summary,
-			String description, String assigneeAccountId, String priority, String dueDate, String status) {
-		try {
-			validateJiraContext(accessToken, baseUrl);
-			validateRequiredString(jiraId, "Issue key");
-			Map<String, String> headers = buildHeaders(accessToken);
-
-			Map<String, Object> fields = new HashMap<>();
-			if (summary != null && !summary.trim().isEmpty()) {
-				fields.put(FIELD_SUMMARY, summary);
-			}
-			if (description != null && !description.trim().isEmpty()) {
-				fields.put(FIELD_DESCRIPTION, buildAdfDocument(description));
-			}
-			if (assigneeAccountId != null && !assigneeAccountId.trim().isEmpty()) {
-				fields.put(FIELD_ASSIGNEE, Map.of(FIELD_ACCOUNT_ID, assigneeAccountId));
-			}
-			if (priority != null && !priority.trim().isEmpty()) {
-				fields.put(FIELD_PRIORITY, Map.of(FIELD_NAME, priority));
-			}
-			if (dueDate != null && !dueDate.trim().isEmpty()) {
-				fields.put(FIELD_DUE_DATE, dueDate);
-			}
-			boolean hasFieldUpdates = !fields.isEmpty();
-			boolean hasStatusUpdate = status != null && !status.trim().isEmpty();
-
-			if (!hasFieldUpdates && !hasStatusUpdate) {
-				throw new SemossPixelException(
-						"No fields provided for update. Please specify at least one field to update.");
-			}
-			if (hasFieldUpdates) {
-				HttpHelperUtility.putRequestStringBody(baseUrl + API_PATH_ISSUE + "/" + jiraId, headers,
-						GSON.toJson(Map.of(FIELD_FIELDS, fields)), ContentType.APPLICATION_JSON, null, null, null);
-			}
-			String appliedStatus = null;
-			String statusWarning = null;
-			if (hasStatusUpdate) {
-				try {
-					appliedStatus = applyTransitionByName(baseUrl, accessToken, jiraId, status);
-				} catch (Exception te) {
-					statusWarning = "Fields updated successfully but status transition to '"
-							+ status + "' failed: " + te.getMessage();
-					classLogger.warn(statusWarning, te);
-				}
-			}
-
-			Map<String, Object> result = new HashMap<>();
-			result.put(FIELD_KEY, jiraId);
-			result.put(FIELD_SUCCESS, true);
-			if (appliedStatus != null) {
-				result.put(FIELD_STATUS, appliedStatus);
-			}
-			if (statusWarning != null) {
-				result.put("statusWarning", statusWarning);
-			}
-			return result;
-
-		} catch (SemossPixelException e) {
-			throw e;
-		} catch (Exception e) {
-			classLogger.error("Error in updateIssue '{}': {}", jiraId, e.getMessage(), e);
-			throw new SemossPixelException("Failed to update issue '" + jiraId + "'. Error: " + e.getMessage());
 		}
 	}
 
@@ -601,14 +327,12 @@ public final class JiraHelper {
 	 * @param deleteSubtasks whether to delete subtasks when deleting the issue
 	 * @return map containing {@code success}
 	 */
-	public static Map<String, Object> deleteIssue(String accessToken, String baseUrl, String projectKey,
-			String jiraId, boolean deleteSubtasks) {
+	public static Map<String, Object> deleteIssue(String accessToken, String baseUrl, String projectKey, String jiraId,
+			boolean deleteSubtasks) {
 		try {
 			validateJiraContext(accessToken, baseUrl);
-			validateRequiredString(projectKey, "Project key");
-			validateRequiredString(jiraId, "Issue key");
 			Map<String, String> headers = buildHeaders(accessToken);
-			String issueUrl = baseUrl + API_PATH_ISSUE + "/" + jiraId;
+			String issueUrl = baseUrl + API_PATH_ISSUE + "/" + URLEncoder.encode(jiraId, StandardCharsets.UTF_8);
 
 			String issueResponse = HttpHelperUtility.getRequest(issueUrl, headers, null, null, null);
 			JsonNode root = OBJECT_MAPPER.readTree(issueResponse);
@@ -624,7 +348,6 @@ public final class JiraHelper {
 			Map<String, Object> result = new HashMap<>();
 			result.put(FIELD_SUCCESS, true);
 			return result;
-
 		} catch (SemossPixelException e) {
 			throw e;
 		} catch (Exception e) {
@@ -642,13 +365,13 @@ public final class JiraHelper {
 	 * @return list of maps, each containing {@code id}, {@code name}, and
 	 *         {@code toStatus}
 	 */
-	public static List<Map<String, Object>> getStatus(String accessToken, String baseUrl, String issueKey) {
+	public static List<Map<String, Object>> getTransitions(String accessToken, String baseUrl, String issueKey) {
+		final String toStatus = "toStatus";
 		try {
-			final String toStatus = "toStatus";
 			validateJiraContext(accessToken, baseUrl);
-			validateRequiredString(issueKey, "Issue key");
 			Map<String, String> headers = buildHeaders(accessToken);
-			String url = baseUrl + API_PATH_ISSUE + "/" + issueKey + API_SUFFIX_TRANSITIONS;
+			String url = baseUrl + API_PATH_ISSUE + "/" + URLEncoder.encode(issueKey, StandardCharsets.UTF_8)
+					+ API_SUFFIX_TRANSITIONS;
 			String response = HttpHelperUtility.getRequest(url, headers, null, null, null);
 
 			JsonNode root = OBJECT_MAPPER.readTree(response);
@@ -662,11 +385,10 @@ public final class JiraHelper {
 				transitionList.add(transition);
 			}
 			return transitionList;
-
 		} catch (SemossPixelException e) {
 			throw e;
 		} catch (Exception e) {
-			classLogger.error("Error in getStatus for '{}': {}", issueKey, e.getMessage(), e);
+			classLogger.error("Error in getTransitions for '{}': {}", issueKey, e.getMessage(), e);
 			throw new SemossPixelException(
 					"Failed to get transitions for issue '" + issueKey + "'. Error: " + e.getMessage());
 		}
@@ -678,16 +400,16 @@ public final class JiraHelper {
 	 * @param accessToken Jira OAuth access token
 	 * @param baseUrl     Jira API base URL including cloud ID
 	 * @param issueKey    issue key (for example, {@code PROJECT-123})
-	 * @return list of maps, each containing {@code id}, {@code author},
+	 * @return list of maps, each containing {@code commentId}, {@code author},
 	 *         {@code created}, {@code updated}, and {@code body}
 	 */
 	public static List<Map<String, Object>> getComments(String accessToken, String baseUrl, String issueKey) {
+		final String updated = "updated";
 		try {
-			final String updated = "updated";
 			validateJiraContext(accessToken, baseUrl);
-			validateRequiredString(issueKey, "Issue key");
 			Map<String, String> headers = buildHeaders(accessToken);
-			String url = baseUrl + API_PATH_ISSUE + "/" + issueKey + API_SUFFIX_COMMENT;
+			String url = baseUrl + API_PATH_ISSUE + "/" + URLEncoder.encode(issueKey, StandardCharsets.UTF_8)
+					+ API_SUFFIX_COMMENT;
 			String response = HttpHelperUtility.getRequest(url, headers, null, null, null);
 
 			JsonNode root = OBJECT_MAPPER.readTree(response);
@@ -695,7 +417,7 @@ public final class JiraHelper {
 			List<Map<String, Object>> commentList = new ArrayList<>();
 			for (JsonNode c : root.path(FIELD_COMMENTS)) {
 				Map<String, Object> comment = new HashMap<>();
-				comment.put(FIELD_ID, c.path(FIELD_ID).asText());
+				comment.put(FIELD_COMMENT_ID, c.path(FIELD_ID).asText());
 				comment.put(FIELD_AUTHOR, c.path(FIELD_AUTHOR).path(FIELD_DISPLAY_NAME).asText());
 				comment.put(FIELD_CREATED, c.path(FIELD_CREATED).asText());
 				comment.put(updated, c.path(updated).asText());
@@ -703,7 +425,6 @@ public final class JiraHelper {
 				commentList.add(comment);
 			}
 			return commentList;
-
 		} catch (SemossPixelException e) {
 			throw e;
 		} catch (Exception e) {
@@ -720,31 +441,29 @@ public final class JiraHelper {
 	 * @param baseUrl     Jira API base URL including cloud ID
 	 * @param issueKey    issue key (for example, {@code PROJECT-123})
 	 * @param commentText plain text comment body
-	 * @return map containing {@code id}, {@code author}, {@code created}, and
-	 *         {@code success}
+	 * @return map containing {@code commentId}, {@code author}, {@code created},
+	 *         and {@code success}
 	 */
 	public static Map<String, Object> addComment(String accessToken, String baseUrl, String issueKey,
 			String commentText) {
 		try {
 			validateJiraContext(accessToken, baseUrl);
-			validateRequiredString(issueKey, "Issue key");
-			validateRequiredString(commentText, "Comment text");
 			Map<String, String> headers = buildHeaders(accessToken);
 
-			String url = baseUrl + API_PATH_ISSUE + "/" + issueKey + API_SUFFIX_COMMENT;
+			String url = baseUrl + API_PATH_ISSUE + "/" + URLEncoder.encode(issueKey, StandardCharsets.UTF_8)
+					+ API_SUFFIX_COMMENT;
 			String response = HttpHelperUtility.postRequestStringBody(url, headers,
-					GSON.toJson(Map.of(FIELD_BODY, buildAdfDocument(commentText))), ContentType.APPLICATION_JSON, null, null,
-					null);
+					GSON.toJson(Map.of(FIELD_BODY, buildAdfDocument(commentText))), ContentType.APPLICATION_JSON, null,
+					null, null);
 
 			JsonNode root = OBJECT_MAPPER.readTree(response);
 
 			Map<String, Object> result = new HashMap<>();
-			result.put(FIELD_ID, root.path(FIELD_ID).asText());
+			result.put(FIELD_COMMENT_ID, root.path(FIELD_ID).asText());
 			result.put(FIELD_AUTHOR, root.path(FIELD_AUTHOR).path(FIELD_DISPLAY_NAME).asText());
 			result.put(FIELD_CREATED, root.path(FIELD_CREATED).asText());
 			result.put(FIELD_SUCCESS, true);
 			return result;
-
 		} catch (SemossPixelException e) {
 			throw e;
 		} catch (Exception e) {
@@ -762,32 +481,30 @@ public final class JiraHelper {
 	 * @param issueKey    issue key (for example, {@code PROJECT-123})
 	 * @param commentId   the numeric comment ID
 	 * @param commentText updated plain text comment body
-	 * @return map containing {@code id}, {@code author}, {@code created}, {@code updated}, and {@code success}
+	 * @return map containing {@code commentId}, {@code author}, {@code created},
+	 *         {@code updated}, and {@code success}
 	 */
-	public static Map<String, Object> editComment(String accessToken, String baseUrl, String issueKey,
-			String commentId, String commentText) {
+	public static Map<String, Object> editComment(String accessToken, String baseUrl, String issueKey, String commentId,
+			String commentText) {
 		try {
 			validateJiraContext(accessToken, baseUrl);
-			validateRequiredString(issueKey, "Issue key");
-			validateRequiredString(commentId, "Comment ID");
-			validateRequiredString(commentText, "Comment text");
 			Map<String, String> headers = buildHeaders(accessToken);
 
-			String url = baseUrl + API_PATH_ISSUE + "/" + issueKey + API_SUFFIX_COMMENT + "/" + commentId;
+			String url = baseUrl + API_PATH_ISSUE + "/" + URLEncoder.encode(issueKey, StandardCharsets.UTF_8)
+					+ API_SUFFIX_COMMENT + "/" + URLEncoder.encode(commentId, StandardCharsets.UTF_8);
 			String response = HttpHelperUtility.putRequestStringBody(url, headers,
-					GSON.toJson(Map.of(FIELD_BODY, buildAdfDocument(commentText))), ContentType.APPLICATION_JSON,
-					null, null, null);
+					GSON.toJson(Map.of(FIELD_BODY, buildAdfDocument(commentText))), ContentType.APPLICATION_JSON, null,
+					null, null);
 
 			JsonNode root = OBJECT_MAPPER.readTree(response);
 
 			Map<String, Object> result = new HashMap<>();
-			result.put(FIELD_ID, root.path(FIELD_ID).asText());
+			result.put(FIELD_COMMENT_ID, root.path(FIELD_ID).asText());
 			result.put(FIELD_AUTHOR, root.path(FIELD_AUTHOR).path(FIELD_DISPLAY_NAME).asText());
 			result.put(FIELD_CREATED, root.path(FIELD_CREATED).asText());
 			result.put("updated", root.path("updated").asText());
 			result.put(FIELD_SUCCESS, true);
 			return result;
-
 		} catch (SemossPixelException e) {
 			throw e;
 		} catch (Exception e) {
@@ -810,23 +527,22 @@ public final class JiraHelper {
 			String commentId) {
 		try {
 			validateJiraContext(accessToken, baseUrl);
-			validateRequiredString(issueKey, "Issue key");
-			validateRequiredString(commentId, "Comment ID");
 			Map<String, String> headers = buildHeaders(accessToken);
 
-			String url = baseUrl + API_PATH_ISSUE + "/" + issueKey + API_SUFFIX_COMMENT + "/" + commentId;
+			String url = baseUrl + API_PATH_ISSUE + "/" + URLEncoder.encode(issueKey, StandardCharsets.UTF_8)
+					+ API_SUFFIX_COMMENT + "/" + URLEncoder.encode(commentId, StandardCharsets.UTF_8);
 			HttpHelperUtility.deleteRequestStringBody(url, headers, null, null, null);
 
 			Map<String, Object> result = new HashMap<>();
 			result.put(FIELD_SUCCESS, true);
 			return result;
-
 		} catch (SemossPixelException e) {
 			throw e;
 		} catch (Exception e) {
-			classLogger.error("Error in deleteComment for '{}' comment '{}': {}", issueKey, commentId, e.getMessage(), e);
-			throw new SemossPixelException(
-					"Failed to delete comment '" + commentId + "' on issue '" + issueKey + "'. Error: " + e.getMessage());
+			classLogger.error("Error in deleteComment for '{}' comment '{}': {}", issueKey, commentId, e.getMessage(),
+					e);
+			throw new SemossPixelException("Failed to delete comment '" + commentId + "' on issue '" + issueKey
+					+ "'. Error: " + e.getMessage());
 		}
 	}
 
@@ -836,36 +552,34 @@ public final class JiraHelper {
 	 * @param accessToken Jira OAuth access token
 	 * @param baseUrl     Jira API base URL including cloud ID
 	 * @param issueKey    issue key (for example, {@code PROJECT-123})
-	 * @param accountId   the assignee's account ID, or {@code null}/empty to unassign
-	 * @return map containing {@code key}, {@code assignee}, and {@code success}
+	 * @param accountId   the assignee's account ID, or {@code null}/empty to
+	 *                    unassign
+	 * @return map containing {@code jiraid}, {@code assignee}, and {@code success}
 	 */
 	public static Map<String, Object> assignIssue(String accessToken, String baseUrl, String issueKey,
 			String accountId) {
 		try {
 			validateJiraContext(accessToken, baseUrl);
-			validateRequiredString(issueKey, "Issue key");
 			Map<String, String> headers = buildHeaders(accessToken);
 
-			String url = baseUrl + API_PATH_ISSUE + "/" + issueKey + "/assignee";
-			// null accountId means unassign; Jira expects {"accountId": null} or
-			// {"accountId": "-1"} for automatic, but null accountId sets unassigned
+			String url = baseUrl + API_PATH_ISSUE + "/" + URLEncoder.encode(issueKey, StandardCharsets.UTF_8)
+					+ API_SUFFIX_ASSIGNEE;
 			Map<String, Object> body = new HashMap<>();
 			body.put(FIELD_ACCOUNT_ID, (accountId != null && !accountId.trim().isEmpty()) ? accountId : null);
-			HttpHelperUtility.putRequestStringBody(url, headers, GSON.toJson(body), ContentType.APPLICATION_JSON,
-					null, null, null);
+			HttpHelperUtility.putRequestStringBody(url, headers, GSON.toJson(body), ContentType.APPLICATION_JSON, null,
+					null, null);
 
 			Map<String, Object> result = new HashMap<>();
-			result.put(FIELD_KEY, issueKey);
-			result.put(FIELD_ASSIGNEE, (accountId != null && !accountId.trim().isEmpty()) ? accountId : DEFAULT_UNASSIGNED);
+			result.put(FIELD_JIRA_ID, issueKey);
+			result.put(FIELD_ASSIGNEE,
+					(accountId != null && !accountId.trim().isEmpty()) ? accountId : DEFAULT_UNASSIGNED);
 			result.put(FIELD_SUCCESS, true);
 			return result;
-
 		} catch (SemossPixelException e) {
 			throw e;
 		} catch (Exception e) {
 			classLogger.error("Error in assignIssue '{}': {}", issueKey, e.getMessage(), e);
-			throw new SemossPixelException(
-					"Failed to assign issue '" + issueKey + "'. Error: " + e.getMessage());
+			throw new SemossPixelException("Failed to assign issue '" + issueKey + "'. Error: " + e.getMessage());
 		}
 	}
 
@@ -875,21 +589,23 @@ public final class JiraHelper {
 	 * @param accessToken Jira OAuth access token
 	 * @param baseUrl     Jira API base URL including cloud ID
 	 * @param issueKey    issue key (for example, {@code PROJECT-123})
-	 * @return list of maps, each containing {@code id}, {@code filename}, {@code mimeType},
-	 *         {@code size}, {@code created}, and {@code contentUrl}
+	 * @return list of maps, each containing {@code attachmentId}, {@code filename},
+	 *         {@code mimeType}, {@code size}, {@code created}, {@code contentUrl},
+	 *         and {@code author}
 	 */
 	public static List<Map<String, Object>> getAttachments(String accessToken, String baseUrl, String issueKey) {
+		final String attachment = "attachment";
+		final String filename = "filename";
+		final String mimeType = "mimeType";
+		final String size = "size";
+		final String contentApiField = "content";
 		try {
-			final String attachment = "attachment";
-			final String filename = "filename";
-			final String mimeType = "mimeType";
-			final String size = "size";
-			final String contentUrl = "content";
 			validateJiraContext(accessToken, baseUrl);
-			validateRequiredString(issueKey, "Issue key");
 			Map<String, String> headers = buildHeaders(accessToken);
 			String response = HttpHelperUtility.getRequest(
-					baseUrl + API_PATH_ISSUE + "/" + issueKey + "?fields=attachment", headers, null, null, null);
+					baseUrl + API_PATH_ISSUE + "/" + URLEncoder.encode(issueKey, StandardCharsets.UTF_8)
+							+ "?fields=attachment",
+					headers, null, null, null);
 
 			JsonNode root = OBJECT_MAPPER.readTree(response);
 			JsonNode attachments = root.path(FIELD_FIELDS).path(attachment);
@@ -897,17 +613,16 @@ public final class JiraHelper {
 			List<Map<String, Object>> attachmentList = new ArrayList<>();
 			for (JsonNode a : attachments) {
 				Map<String, Object> att = new HashMap<>();
-				att.put(FIELD_ID, a.path(FIELD_ID).asText());
+				att.put(FIELD_ATTACHMENT_ID, a.path(FIELD_ID).asText());
 				att.put(filename, a.path(filename).asText());
 				att.put(mimeType, a.path(mimeType).asText());
 				att.put(size, a.path(size).asLong());
 				att.put(FIELD_CREATED, a.path(FIELD_CREATED).asText());
-				att.put(contentUrl, a.path(contentUrl).asText());
+				att.put(FIELD_CONTENT_URL, a.path(contentApiField).asText());
 				att.put(FIELD_AUTHOR, a.path(FIELD_AUTHOR).path(FIELD_DISPLAY_NAME).asText());
 				attachmentList.add(att);
 			}
 			return attachmentList;
-
 		} catch (SemossPixelException e) {
 			throw e;
 		} catch (Exception e) {
@@ -924,23 +639,21 @@ public final class JiraHelper {
 	 * @param baseUrl     Jira API base URL including cloud ID
 	 * @param issueKey    issue key (for example, {@code PROJECT-123})
 	 * @param filePath    absolute path to the file to attach
-	 * @return map containing {@code id}, {@code filename}, {@code size}, and {@code success}
+	 * @return map containing {@code attachmentId}, {@code filename}, {@code size},
+	 *         and {@code success}
 	 */
 	public static Map<String, Object> addAttachment(String accessToken, String baseUrl, String issueKey,
 			String filePath) {
 		try {
 			validateJiraContext(accessToken, baseUrl);
-			validateRequiredString(issueKey, "Issue key");
-			validateRequiredString(filePath, "File path");
 
-			String url = baseUrl + API_PATH_ISSUE + "/" + issueKey + "/attachments";
+			String url = baseUrl + API_PATH_ISSUE + "/" + URLEncoder.encode(issueKey, StandardCharsets.UTF_8)
+					+ API_SUFFIX_ATTACHMENTS;
 
 			File file = new File(filePath);
 			if (!file.exists() || !file.isFile()) {
 				throw new SemossPixelException("File not found: " + filePath);
 			}
-
-			// Jira attachment API requires multipart/form-data with X-Atlassian-Token: no-check
 			String response;
 			try (CloseableHttpClient httpClient = HttpClientBuilder.create().useSystemProperties().build()) {
 				HttpPost post = new HttpPost(url);
@@ -949,23 +662,29 @@ public final class JiraHelper {
 				post.addHeader("X-Atlassian-Token", "no-check");
 
 				HttpEntity entity = MultipartEntityBuilder.create()
-						.addPart("file", new FileBody(file, ContentType.APPLICATION_OCTET_STREAM))
-						.build();
+						.addPart("file", new FileBody(file, ContentType.APPLICATION_OCTET_STREAM)).build();
 				post.setEntity(entity);
 
-				response = httpClient.execute(post, resp -> EntityUtils.toString(resp.getEntity(), StandardCharsets.UTF_8));
+				response = httpClient.execute(post, httpResponse -> {
+					int statusCode = httpResponse.getCode();
+					String body = EntityUtils.toString(httpResponse.getEntity(), StandardCharsets.UTF_8);
+					if (statusCode < 200 || statusCode >= 300) {
+						throw new SemossPixelException(
+								"Jira attachment upload failed (HTTP " + statusCode + "): " + body);
+					}
+					return body;
+				});
 			}
 
 			JsonNode root = OBJECT_MAPPER.readTree(response);
 			JsonNode firstAttachment = root.isArray() && root.size() > 0 ? root.get(0) : root;
 
 			Map<String, Object> result = new HashMap<>();
-			result.put(FIELD_ID, firstAttachment.path(FIELD_ID).asText());
+			result.put(FIELD_ATTACHMENT_ID, firstAttachment.path(FIELD_ID).asText());
 			result.put("filename", firstAttachment.path("filename").asText());
 			result.put("size", firstAttachment.path("size").asLong());
 			result.put(FIELD_SUCCESS, true);
 			return result;
-
 		} catch (SemossPixelException e) {
 			throw e;
 		} catch (Exception e) {
@@ -978,21 +697,18 @@ public final class JiraHelper {
 	/**
 	 * Creates a link between two Jira issues.
 	 *
-	 * @param accessToken Jira OAuth access token
-	 * @param baseUrl     Jira API base URL including cloud ID
-	 * @param linkType    the link type name (for example, {@code "Blocks"}, {@code "Relates"})
-	 * @param inwardIssue the issue key for the inward side of the link
+	 * @param accessToken  Jira OAuth access token
+	 * @param baseUrl      Jira API base URL including cloud ID
+	 * @param linkType     the link type name (for example, {@code "Blocks"},
+	 *                     {@code "Relates"})
+	 * @param inwardIssue  the issue key for the inward side of the link
 	 * @param outwardIssue the issue key for the outward side of the link
 	 * @return map containing {@code success}
 	 */
 	public static Map<String, Object> linkIssues(String accessToken, String baseUrl, String linkType,
 			String inwardIssue, String outwardIssue) {
 		try {
-			final String issueLinkUrl = "/rest/api/3/issueLink";
 			validateJiraContext(accessToken, baseUrl);
-			validateRequiredString(linkType, "Link type");
-			validateRequiredString(inwardIssue, "Inward issue key");
-			validateRequiredString(outwardIssue, "Outward issue key");
 			Map<String, String> headers = buildHeaders(accessToken);
 
 			Map<String, Object> body = new HashMap<>();
@@ -1000,8 +716,8 @@ public final class JiraHelper {
 			body.put("inwardIssue", Map.of(FIELD_KEY, inwardIssue));
 			body.put("outwardIssue", Map.of(FIELD_KEY, outwardIssue));
 
-			HttpHelperUtility.postRequestStringBody(baseUrl + issueLinkUrl, headers,
-					GSON.toJson(body), ContentType.APPLICATION_JSON, null, null, null);
+			HttpHelperUtility.postRequestStringBody(baseUrl + API_PATH_ISSUELINK, headers, GSON.toJson(body),
+					ContentType.APPLICATION_JSON, null, null, null);
 
 			Map<String, Object> result = new HashMap<>();
 			result.put(FIELD_SUCCESS, true);
@@ -1009,7 +725,6 @@ public final class JiraHelper {
 			result.put("inwardIssue", inwardIssue);
 			result.put("outwardIssue", outwardIssue);
 			return result;
-
 		} catch (SemossPixelException e) {
 			throw e;
 		} catch (Exception e) {
@@ -1024,17 +739,17 @@ public final class JiraHelper {
 	 *
 	 * @param accessToken Jira OAuth access token
 	 * @param baseUrl     Jira API base URL including cloud ID
-	 * @return list of maps, each containing {@code id}, {@code name}, {@code inward}, and {@code outward}
+	 * @return list of maps, each containing {@code id}, {@code linkType},
+	 *         {@code inward}, and {@code outward}
 	 */
 	public static List<Map<String, Object>> getIssueLinkTypes(String accessToken, String baseUrl) {
+		final String issueLinkTypes = "issueLinkTypes";
+		final String inward = "inward";
+		final String outward = "outward";
 		try {
-			final String issueLinkTypeUrl = "/rest/api/3/issueLinkType";
-			final String issueLinkTypes = "issueLinkTypes";
-			final String inward = "inward";
-			final String outward = "outward";
 			validateJiraContext(accessToken, baseUrl);
 			Map<String, String> headers = buildHeaders(accessToken);
-			String response = HttpHelperUtility.getRequest(baseUrl + issueLinkTypeUrl, headers, null, null, null);
+			String response = HttpHelperUtility.getRequest(baseUrl + API_PATH_ISSUELINKTYPE, headers, null, null, null);
 
 			JsonNode root = OBJECT_MAPPER.readTree(response);
 			JsonNode linkTypes = root.path(issueLinkTypes);
@@ -1043,13 +758,12 @@ public final class JiraHelper {
 			for (JsonNode lt : linkTypes) {
 				Map<String, Object> linkType = new HashMap<>();
 				linkType.put(FIELD_ID, lt.path(FIELD_ID).asText());
-				linkType.put(FIELD_NAME, lt.path(FIELD_NAME).asText());
+				linkType.put(FIELD_LINK_TYPE, lt.path(FIELD_NAME).asText());
 				linkType.put(inward, lt.path(inward).asText());
 				linkType.put(outward, lt.path(outward).asText());
 				linkTypeList.add(linkType);
 			}
 			return linkTypeList;
-
 		} catch (SemossPixelException e) {
 			throw e;
 		} catch (Exception e) {
@@ -1064,20 +778,21 @@ public final class JiraHelper {
 	 * @param accessToken Jira OAuth access token
 	 * @param baseUrl     Jira API base URL including cloud ID
 	 * @param issueKey    issue key (for example, {@code PROJECT-123})
-	 * @param timeSpent   time in Jira notation (for example, {@code "2h 30m"}, {@code "1d"})
+	 * @param timeSpent   time in Jira notation (for example, {@code "2h 30m"},
+	 *                    {@code "1d"})
 	 * @param comment     optional comment for the worklog entry
 	 * @param started     optional start datetime in ISO format; defaults to now
-	 * @return map containing worklog entry details and {@code success}
+	 * @return map containing {@code worklogId}, {@code timeSpent},
+	 *         {@code timeSpentSeconds}, {@code author}, {@code created}, and
+	 *         {@code success}
 	 */
-	public static Map<String, Object> logWork(String accessToken, String baseUrl, String issueKey,
-			String timeSpent, String comment, String started) {
+	public static Map<String, Object> logWork(String accessToken, String baseUrl, String issueKey, String timeSpent,
+			String comment, String started) {
+		final String timeSpentField = "timeSpent";
+		final String startedField = "started";
+		final String timeSpentSecondsField = "timeSpentSeconds";
 		try {
-			final String worklogUrl = "/worklog";
-			final String timeSpentField = "timeSpent";
-			final String startedField = "started";
 			validateJiraContext(accessToken, baseUrl);
-			validateRequiredString(issueKey, "Issue key");
-			validateRequiredString(timeSpent, "Time spent");
 			Map<String, String> headers = buildHeaders(accessToken);
 
 			Map<String, Object> body = new HashMap<>();
@@ -1089,27 +804,26 @@ public final class JiraHelper {
 				body.put(startedField, started);
 			}
 
-			String url = baseUrl + API_PATH_ISSUE + "/" + issueKey + worklogUrl;
-			String response = HttpHelperUtility.postRequestStringBody(url, headers,
-					GSON.toJson(body), ContentType.APPLICATION_JSON, null, null, null);
+			String url = baseUrl + API_PATH_ISSUE + "/" + URLEncoder.encode(issueKey, StandardCharsets.UTF_8)
+					+ API_SUFFIX_WORKLOG;
+			String response = HttpHelperUtility.postRequestStringBody(url, headers, GSON.toJson(body),
+					ContentType.APPLICATION_JSON, null, null, null);
 
 			JsonNode root = OBJECT_MAPPER.readTree(response);
 
 			Map<String, Object> result = new HashMap<>();
-			result.put(FIELD_ID, root.path(FIELD_ID).asText());
+			result.put(FIELD_WORKLOG_ID, root.path(FIELD_ID).asText());
 			result.put(timeSpentField, root.path(timeSpentField).asText());
-			result.put("timeSpentSeconds", root.path("timeSpentSeconds").asLong());
+			result.put(timeSpentSecondsField, root.path(timeSpentSecondsField).asLong());
 			result.put(FIELD_AUTHOR, root.path(FIELD_AUTHOR).path(FIELD_DISPLAY_NAME).asText());
 			result.put(FIELD_CREATED, root.path(FIELD_CREATED).asText());
 			result.put(FIELD_SUCCESS, true);
 			return result;
-
 		} catch (SemossPixelException e) {
 			throw e;
 		} catch (Exception e) {
 			classLogger.error("Error in logWork for '{}': {}", issueKey, e.getMessage(), e);
-			throw new SemossPixelException(
-					"Failed to log work on issue '" + issueKey + "'. Error: " + e.getMessage());
+			throw new SemossPixelException("Failed to log work on issue '" + issueKey + "'. Error: " + e.getMessage());
 		}
 	}
 
@@ -1119,18 +833,21 @@ public final class JiraHelper {
 	 * @param accessToken Jira OAuth access token
 	 * @param baseUrl     Jira API base URL including cloud ID
 	 * @param issueKey    issue key (for example, {@code PROJECT-123})
-	 * @return list of maps, each containing worklog entry details
+	 * @return list of maps, each containing {@code worklogId}, {@code author},
+	 *         {@code timeSpent}, {@code timeSpentSeconds}, {@code started},
+	 *         {@code created}, {@code updated}, and {@code comment}
 	 */
 	public static List<Map<String, Object>> getWorklogs(String accessToken, String baseUrl, String issueKey) {
+		final String worklogs = "worklogs";
+		final String timeSpentField = "timeSpent";
+		final String startedField = "started";
+		final String timeSpentSecondsField = "timeSpentSeconds";
+		final String updatedField = "updated";
 		try {
-			final String worklogUrl = "/worklog";
-			final String worklogs = "worklogs";
-			final String timeSpentField = "timeSpent";
-			final String startedField = "started";
 			validateJiraContext(accessToken, baseUrl);
-			validateRequiredString(issueKey, "Issue key");
 			Map<String, String> headers = buildHeaders(accessToken);
-			String url = baseUrl + API_PATH_ISSUE + "/" + issueKey + worklogUrl;
+			String url = baseUrl + API_PATH_ISSUE + "/" + URLEncoder.encode(issueKey, StandardCharsets.UTF_8)
+					+ API_SUFFIX_WORKLOG;
 			String response = HttpHelperUtility.getRequest(url, headers, null, null, null);
 
 			JsonNode root = OBJECT_MAPPER.readTree(response);
@@ -1138,18 +855,17 @@ public final class JiraHelper {
 			List<Map<String, Object>> worklogList = new ArrayList<>();
 			for (JsonNode w : root.path(worklogs)) {
 				Map<String, Object> entry = new HashMap<>();
-				entry.put(FIELD_ID, w.path(FIELD_ID).asText());
+				entry.put(FIELD_WORKLOG_ID, w.path(FIELD_ID).asText());
 				entry.put(FIELD_AUTHOR, w.path(FIELD_AUTHOR).path(FIELD_DISPLAY_NAME).asText());
 				entry.put(timeSpentField, w.path(timeSpentField).asText());
-				entry.put("timeSpentSeconds", w.path("timeSpentSeconds").asLong());
+				entry.put(timeSpentSecondsField, w.path(timeSpentSecondsField).asLong());
 				entry.put(startedField, w.path(startedField).asText());
 				entry.put(FIELD_CREATED, w.path(FIELD_CREATED).asText());
-				entry.put("updated", w.path("updated").asText());
-				entry.put(FIELD_BODY, parseAdfToPlainText(w.path("comment")));
+				entry.put(updatedField, w.path(updatedField).asText());
+				entry.put(FIELD_COMMENT, parseAdfToPlainText(w.path(FIELD_COMMENT)));
 				worklogList.add(entry);
 			}
 			return worklogList;
-
 		} catch (SemossPixelException e) {
 			throw e;
 		} catch (Exception e) {
@@ -1169,23 +885,21 @@ public final class JiraHelper {
 	 */
 	public static Map<String, Object> unlinkIssues(String accessToken, String baseUrl, String linkId) {
 		try {
-			final String issueLinkUrl = "/rest/api/3/issueLink/";
 			validateJiraContext(accessToken, baseUrl);
-			validateRequiredString(linkId, "Link ID");
 			Map<String, String> headers = buildHeaders(accessToken);
 
-			HttpHelperUtility.deleteRequestStringBody(baseUrl + issueLinkUrl + linkId, headers, null, null, null);
+			HttpHelperUtility.deleteRequestStringBody(
+					baseUrl + API_PATH_ISSUELINK + "/" + URLEncoder.encode(linkId, StandardCharsets.UTF_8),
+					headers, null, null, null);
 
 			Map<String, Object> result = new HashMap<>();
 			result.put(FIELD_SUCCESS, true);
 			return result;
-
 		} catch (SemossPixelException e) {
 			throw e;
 		} catch (Exception e) {
 			classLogger.error("Error in unlinkIssues for link '{}': {}", linkId, e.getMessage(), e);
-			throw new SemossPixelException(
-					"Failed to remove issue link '" + linkId + "'. Error: " + e.getMessage());
+			throw new SemossPixelException("Failed to remove issue link '" + linkId + "'. Error: " + e.getMessage());
 		}
 	}
 
@@ -1199,17 +913,16 @@ public final class JiraHelper {
 	 */
 	public static Map<String, Object> deleteAttachment(String accessToken, String baseUrl, String attachmentId) {
 		try {
-			final String attachmentUrl = "/rest/api/3/attachment/";
 			validateJiraContext(accessToken, baseUrl);
-			validateRequiredString(attachmentId, "Attachment ID");
 			Map<String, String> headers = buildHeaders(accessToken);
 
-			HttpHelperUtility.deleteRequestStringBody(baseUrl + attachmentUrl + attachmentId, headers, null, null, null);
+			HttpHelperUtility.deleteRequestStringBody(
+					baseUrl + API_PATH_ATTACHMENT + "/" + URLEncoder.encode(attachmentId, StandardCharsets.UTF_8),
+					headers, null, null, null);
 
 			Map<String, Object> result = new HashMap<>();
 			result.put(FIELD_SUCCESS, true);
 			return result;
-
 		} catch (SemossPixelException e) {
 			throw e;
 		} catch (Exception e) {
@@ -1226,21 +939,22 @@ public final class JiraHelper {
 	 * @param baseUrl     Jira API base URL including cloud ID
 	 * @param issueKey    issue key (for example, {@code PROJECT-123})
 	 * @param worklogId   the worklog entry ID to update
-	 * @param timeSpent   updated time in Jira notation (for example, {@code "3h"}, {@code "1d 2h"})
+	 * @param timeSpent   updated time in Jira notation (for example, {@code "3h"},
+	 *                    {@code "1d 2h"})
 	 * @param comment     optional updated comment for the worklog entry
 	 * @param started     optional updated start datetime in ISO format
-	 * @return map containing updated worklog entry details and {@code success}
+	 * @return map containing {@code worklogId}, {@code timeSpent},
+	 *         {@code timeSpentSeconds}, {@code author}, {@code updated}, and
+	 *         {@code success}
 	 */
 	public static Map<String, Object> updateWorklog(String accessToken, String baseUrl, String issueKey,
 			String worklogId, String timeSpent, String comment, String started) {
+		final String timeSpentField = "timeSpent";
+		final String startedField = "started";
+		final String timeSpentSecondsField = "timeSpentSeconds";
+		final String updatedField = "updated";
 		try {
-			final String worklogUrl = "/worklog/";
-			final String timeSpentField = "timeSpent";
-			final String startedField = "started";
 			validateJiraContext(accessToken, baseUrl);
-			validateRequiredString(issueKey, "Issue key");
-			validateRequiredString(worklogId, "Worklog ID");
-			validateRequiredString(timeSpent, "Time spent");
 			Map<String, String> headers = buildHeaders(accessToken);
 
 			Map<String, Object> body = new HashMap<>();
@@ -1252,27 +966,28 @@ public final class JiraHelper {
 				body.put(startedField, started);
 			}
 
-			String url = baseUrl + API_PATH_ISSUE + "/" + issueKey + worklogUrl + worklogId;
-			String response = HttpHelperUtility.putRequestStringBody(url, headers,
-					GSON.toJson(body), ContentType.APPLICATION_JSON, null, null, null);
+			String url = baseUrl + API_PATH_ISSUE + "/" + URLEncoder.encode(issueKey, StandardCharsets.UTF_8)
+					+ API_SUFFIX_WORKLOG + "/" + URLEncoder.encode(worklogId, StandardCharsets.UTF_8);
+			String response = HttpHelperUtility.putRequestStringBody(url, headers, GSON.toJson(body),
+					ContentType.APPLICATION_JSON, null, null, null);
 
 			JsonNode root = OBJECT_MAPPER.readTree(response);
 
 			Map<String, Object> result = new HashMap<>();
-			result.put(FIELD_ID, root.path(FIELD_ID).asText());
+			result.put(FIELD_WORKLOG_ID, root.path(FIELD_ID).asText());
 			result.put(timeSpentField, root.path(timeSpentField).asText());
-			result.put("timeSpentSeconds", root.path("timeSpentSeconds").asLong());
+			result.put(timeSpentSecondsField, root.path(timeSpentSecondsField).asLong());
 			result.put(FIELD_AUTHOR, root.path(FIELD_AUTHOR).path(FIELD_DISPLAY_NAME).asText());
-			result.put("updated", root.path("updated").asText());
+			result.put(updatedField, root.path(updatedField).asText());
 			result.put(FIELD_SUCCESS, true);
 			return result;
-
 		} catch (SemossPixelException e) {
 			throw e;
 		} catch (Exception e) {
-			classLogger.error("Error in updateWorklog for '{}' worklog '{}': {}", issueKey, worklogId, e.getMessage(), e);
-			throw new SemossPixelException(
-					"Failed to update worklog '" + worklogId + "' on issue '" + issueKey + "'. Error: " + e.getMessage());
+			classLogger.error("Error in updateWorklog for '{}' worklog '{}': {}", issueKey, worklogId, e.getMessage(),
+					e);
+			throw new SemossPixelException("Failed to update worklog '" + worklogId + "' on issue '" + issueKey
+					+ "'. Error: " + e.getMessage());
 		}
 	}
 
@@ -1288,47 +1003,48 @@ public final class JiraHelper {
 	public static Map<String, Object> deleteWorklog(String accessToken, String baseUrl, String issueKey,
 			String worklogId) {
 		try {
-			final String worklogUrl = "/worklog/";
 			validateJiraContext(accessToken, baseUrl);
-			validateRequiredString(issueKey, "Issue key");
-			validateRequiredString(worklogId, "Worklog ID");
 			Map<String, String> headers = buildHeaders(accessToken);
 
-			String url = baseUrl + API_PATH_ISSUE + "/" + issueKey + worklogUrl + worklogId;
+			String url = baseUrl + API_PATH_ISSUE + "/" + URLEncoder.encode(issueKey, StandardCharsets.UTF_8)
+					+ API_SUFFIX_WORKLOG + "/" + URLEncoder.encode(worklogId, StandardCharsets.UTF_8);
 			HttpHelperUtility.deleteRequestStringBody(url, headers, null, null, null);
 
 			Map<String, Object> result = new HashMap<>();
 			result.put(FIELD_SUCCESS, true);
 			return result;
-
 		} catch (SemossPixelException e) {
 			throw e;
 		} catch (Exception e) {
-			classLogger.error("Error in deleteWorklog for '{}' worklog '{}': {}", issueKey, worklogId, e.getMessage(), e);
-			throw new SemossPixelException(
-					"Failed to delete worklog '" + worklogId + "' on issue '" + issueKey + "'. Error: " + e.getMessage());
+			classLogger.error("Error in deleteWorklog for '{}' worklog '{}': {}", issueKey, worklogId, e.getMessage(),
+					e);
+			throw new SemossPixelException("Failed to delete worklog '" + worklogId + "' on issue '" + issueKey
+					+ "'. Error: " + e.getMessage());
 		}
 	}
 
 	private static Map<String, Object> executeJqlSearch(String accessToken, String baseUrl, String jql,
 			String nextPageToken, int maxResults) throws Exception {
-		final String jiraSearchUrl = "/rest/api/3/search/jql";
 		final String isLast = "isLast";
-		Map<String, String> headers = buildHeaders(accessToken);
 
-		int safeMax = JiraUtils.clampMaxResults(maxResults);
+		Map<String, String> headers = buildHeaders(accessToken);
+		int safeMax = 0;
+		if (maxResults < 1) {
+			safeMax = 50;
+		} else {
+			safeMax = Math.min(maxResults, 100);
+		}
 
 		Map<String, Object> body = new HashMap<>();
 		body.put(FIELD_JQL, jql);
 		body.put(FIELD_MAX_RESULTS, safeMax);
-		body.put(FIELD_FIELDS, Arrays.asList(FIELD_SUMMARY, FIELD_STATUS, FIELD_ASSIGNEE, FIELD_PRIORITY,
-				FIELD_ISSUE_TYPE, FIELD_DUE_DATE, FIELD_LABELS));
+		body.put(FIELD_FIELDS, List.of("*all"));
 		if (nextPageToken != null && !nextPageToken.trim().isEmpty()) {
 			body.put(FIELD_NEXT_PAGE_TOKEN, nextPageToken);
 		}
 
-		String response = HttpHelperUtility.postRequestStringBody(baseUrl + jiraSearchUrl, headers,
-				GSON.toJson(body), ContentType.APPLICATION_JSON, null, null, null);
+		String response = HttpHelperUtility.postRequestStringBody(baseUrl + API_PATH_SEARCH, headers, GSON.toJson(body),
+				ContentType.APPLICATION_JSON, null, null, null);
 		JsonNode root = OBJECT_MAPPER.readTree(response);
 
 		List<Map<String, Object>> issueList = new ArrayList<>();
@@ -1344,6 +1060,314 @@ public final class JiraHelper {
 			result.put(FIELD_NEXT_PAGE_TOKEN, root.path(FIELD_NEXT_PAGE_TOKEN).asText());
 		}
 		return result;
+	}
+
+	/**
+	 * Returns the fields available when creating an issue for a given project +
+	 * issue type. Calls GET
+	 * /rest/api/3/issue/createmeta/{projectKey}/issuetypes/{issueTypeId}.
+	 * <p>
+	 * Each returned field includes its schema type so callers know the expected
+	 * value structure (plain string, object with id/key, array, etc.) and any
+	 * allowed values for enum-style fields.
+	 *
+	 * @param accessToken Jira OAuth access token
+	 * @param baseUrl     Jira API base URL including cloud ID
+	 * @param projectKey  Jira project key (e.g. "PROJ")
+	 * @param issueTypeId Jira issue type ID (numeric string)
+	 * @return list of maps with {@code fieldId}, {@code name}, {@code required},
+	 *         {@code hasDefaultValue}, {@code key}, {@code schema}, and
+	 *         optionally {@code allowedValues}
+	 */
+	@SuppressWarnings("unchecked")
+	public static List<Map<String, Object>> getCreateMetaFields(String accessToken, String baseUrl, String projectKey,
+			String issueTypeId) {
+		final String FIELD_FIELDID = "fieldId";
+		final String FIELD_REQUIRED = "required";
+		final String FIELD_HAS_DEFAULT = "hasDefaultValue";
+		final String FIELD_REPORTER = "reporter";
+		final String FIELD_SCHEMA = "schema";
+		final String FIELD_ALLOWED_VALUES = "allowedValues";
+		final String FIELD_VALUE = "value";
+		try {
+			validateJiraContext(accessToken, baseUrl);
+			Map<String, String> headers = buildHeaders(accessToken);
+			String url = baseUrl + API_PATH_CREATEMETA + "/" + URLEncoder.encode(projectKey, StandardCharsets.UTF_8)
+					+ "/issuetypes/" + URLEncoder.encode(issueTypeId, StandardCharsets.UTF_8);
+			String response = HttpHelperUtility.getRequest(url, headers, null, null, null);
+			JsonNode root = OBJECT_MAPPER.readTree(response);
+			JsonNode fieldsArr = root.path(FIELD_FIELDS);
+			List<Map<String, Object>> results = new ArrayList<>();
+			if (fieldsArr.isArray()) {
+				for (JsonNode f : fieldsArr) {
+					Map<String, Object> entry = new HashMap<>();
+					String fieldId = f.path(FIELD_FIELDID).asText(null);
+					entry.put(FIELD_FIELDID, fieldId);
+					entry.put(FIELD_NAME, f.path(FIELD_NAME).asText(null));
+					boolean required = FIELD_REPORTER.equals(fieldId) ? false : f.path(FIELD_REQUIRED).asBoolean(false);
+					entry.put(FIELD_REQUIRED, required);
+					entry.put(FIELD_HAS_DEFAULT, f.path(FIELD_HAS_DEFAULT).asBoolean(false));
+					entry.put(FIELD_KEY, f.path(FIELD_KEY).asText(null));
+
+					JsonNode schemaNode = f.path(FIELD_SCHEMA);
+					if (schemaNode.isObject()) {
+						entry.put(FIELD_SCHEMA, OBJECT_MAPPER.convertValue(schemaNode, Map.class));
+					}
+
+					JsonNode allowedNode = f.path(FIELD_ALLOWED_VALUES);
+					if (allowedNode.isArray() && allowedNode.size() > 0) {
+						List<Map<String, Object>> allowedValues = new ArrayList<>();
+						for (JsonNode av : allowedNode) {
+							Map<String, Object> valEntry = new HashMap<>();
+							if (av.has(FIELD_ID)) {
+								valEntry.put(FIELD_ID, av.path(FIELD_ID).asText());
+							}
+							if (av.has(FIELD_NAME)) {
+								valEntry.put(FIELD_NAME, av.path(FIELD_NAME).asText());
+							}
+							if (av.has(FIELD_KEY)) {
+								valEntry.put(FIELD_KEY, av.path(FIELD_KEY).asText());
+							}
+							if (av.has(FIELD_VALUE)) {
+								valEntry.put(FIELD_VALUE, av.path(FIELD_VALUE).asText());
+							}
+							allowedValues.add(valEntry);
+						}
+						entry.put(FIELD_ALLOWED_VALUES, allowedValues);
+					}
+					results.add(entry);
+				}
+			}
+			return results;
+		} catch (SemossPixelException e) {
+			throw e;
+		} catch (Exception e) {
+			classLogger.error("Error fetching create-meta fields for project '{}' issueType '{}': {}", projectKey,
+					issueTypeId, e.getMessage(), e);
+			throw new SemossPixelException("Failed to get fields for project '" + projectKey + "' issue type '"
+					+ issueTypeId + "': " + e.getMessage());
+		}
+	}
+
+	/**
+	 * Creates a Jira issue using a dynamic field map. The field map is sent inside
+	 * a {@code "fields"} wrapper as required by the Jira REST API.
+	 *
+	 * @param accessToken Jira OAuth access token
+	 * @param baseUrl     Jira API base URL including cloud ID
+	 * @param fieldValues map of field names to values
+	 * @return result map with {@code id}, {@code jiraid}, and {@code success}
+	 */
+	@SuppressWarnings("unchecked")
+	public static Map<String, Object> createIssueFromMap(String accessToken, String baseUrl,
+			Map<String, Object> fieldValues) {
+		try {
+			validateJiraContext(accessToken, baseUrl);
+			Map<String, String> headers = buildHeaders(accessToken);
+
+			Map<String, Object> requestBody = new HashMap<>();
+			requestBody.put(FIELD_FIELDS, convertAdfFields(fieldValues));
+			String jsonBody = GSON.toJson(requestBody);
+
+			String response = HttpHelperUtility.postRequestStringBody(baseUrl + API_PATH_ISSUE, headers, jsonBody,
+					ContentType.APPLICATION_JSON, null, null, null);
+			Map<String, Object> resp = GSON.fromJson(response, Map.class);
+
+			if (resp == null || (resp.get(FIELD_ID) == null && resp.get(FIELD_KEY) == null)) {
+				StringBuilder errorDetail = new StringBuilder();
+				if (resp != null) {
+					Object errors = resp.get("errors");
+					Object errorMessages = resp.get("errorMessages");
+					if (errors != null) {
+						errorDetail.append(" errors=").append(errors);
+					}
+					if (errorMessages != null) {
+						errorDetail.append(" errorMessages=").append(errorMessages);
+					}
+				}
+				throw new SemossPixelException(
+						"Jira did not return an issue id or key. The issue was not created."
+								+ errorDetail.toString());
+			}
+
+			Map<String, Object> result = new HashMap<>();
+			result.put(FIELD_ID, resp.get(FIELD_ID).toString());
+			result.put(FIELD_JIRA_ID, resp.get(FIELD_KEY).toString());
+			result.put(FIELD_SUCCESS, true);
+			return result;
+		} catch (SemossPixelException e) {
+			throw e;
+		} catch (Exception e) {
+			classLogger.error("Error in createIssueFromMap: {}", e.getMessage(), e);
+			throw new SemossPixelException("Failed to create Jira issue from map. Error: " + e.getMessage());
+		}
+	}
+
+	/**
+	 * Updates a Jira issue's fields using the editmeta API to validate which keys
+	 * are accepted. Only keys present in the editmeta response are sent via
+	 * {@code PUT /rest/api/3/issue/{key}}. Any keys not recognized as editable
+	 * fields are rejected with an error.
+	 *
+	 * @param accessToken Jira OAuth access token
+	 * @param baseUrl     Jira API base URL including cloud ID
+	 * @param issueKey    Jira issue key (e.g. "PROJ-123")
+	 * @param fieldValues map of field names to values (must only contain editable fields)
+	 * @return result map with {@code jiraid} and {@code success}
+	 */
+	public static Map<String, Object> updateIssueFromMap(String accessToken, String baseUrl, String issueKey,
+			Map<String, Object> fieldValues) {
+		try {
+			validateJiraContext(accessToken, baseUrl);
+
+			if (fieldValues == null || fieldValues.isEmpty()) {
+				throw new SemossPixelException(
+						"No fields provided for update. Please specify at least one field to update.");
+			}
+
+			Map<String, String> headers = buildHeaders(accessToken);
+
+			Set<String> editableFieldKeys = getEditableFieldKeys(accessToken, baseUrl, issueKey);
+
+			Set<String> invalidKeys = new HashSet<>();
+			for (String key : fieldValues.keySet()) {
+				if (!editableFieldKeys.contains(key)) {
+					invalidKeys.add(key);
+				}
+			}
+			if (!invalidKeys.isEmpty()) {
+				throw new SemossPixelException(
+						"The following keys are not editable fields for issue '" + issueKey
+								+ "': " + invalidKeys + ". Editable fields are: " + editableFieldKeys);
+			}
+
+			Map<String, Object> requestBody = new HashMap<>();
+			requestBody.put(FIELD_FIELDS, convertAdfFields(fieldValues));
+			String jsonBody = GSON.toJson(requestBody);
+			HttpHelperUtility.putRequestStringBody(
+					baseUrl + API_PATH_ISSUE + "/" + URLEncoder.encode(issueKey, StandardCharsets.UTF_8),
+					headers, jsonBody, ContentType.APPLICATION_JSON, null, null, null);
+
+			Map<String, Object> result = new HashMap<>();
+			result.put(FIELD_JIRA_ID, issueKey);
+			result.put(FIELD_SUCCESS, true);
+			return result;
+		} catch (SemossPixelException e) {
+			throw e;
+		} catch (Exception e) {
+			classLogger.error("Error in updateIssueFromMap '{}': {}", issueKey, e.getMessage(), e);
+			throw new SemossPixelException(
+					"Failed to update issue '" + issueKey + "' from map. Error: " + e.getMessage());
+		}
+	}
+
+	/**
+	 * Fetches the set of editable field keys for a specific Jira issue using the
+	 * editmeta endpoint ({@code GET /rest/api/3/issue/{key}/editmeta}).
+	 *
+	 * @param accessToken Jira OAuth access token
+	 * @param baseUrl     Jira API base URL including cloud ID
+	 * @param issueKey    Jira issue key
+	 * @return set of field key strings that Jira accepts for this issue
+	 */
+	private static Set<String> getEditableFieldKeys(String accessToken, String baseUrl, String issueKey) {
+		try {
+			Map<String, String> headers = buildHeaders(accessToken);
+			String url = baseUrl + API_PATH_ISSUE + "/" + URLEncoder.encode(issueKey, StandardCharsets.UTF_8)
+					+ API_SUFFIX_EDITMETA;
+			String response = HttpHelperUtility.getRequest(url, headers, null, null, null);
+			JsonNode root = OBJECT_MAPPER.readTree(response);
+			JsonNode fieldsNode = root.path(FIELD_FIELDS);
+			Set<String> fieldKeys = new HashSet<>();
+			if (fieldsNode.isObject()) {
+				fieldsNode.fieldNames().forEachRemaining(fieldKeys::add);
+			}
+			return fieldKeys;
+		} catch (Exception e) {
+			classLogger.error("Failed to fetch editmeta for '{}': {}", issueKey, e.getMessage(), e);
+			throw new SemossPixelException(
+					"Failed to retrieve editable fields for issue '" + issueKey + "'. Error: " + e.getMessage());
+		}
+	}
+
+	/**
+	 * Returns the fields editable on an existing Jira issue. Calls
+	 * {@code GET /rest/api/3/issue/{key}/editmeta}.
+	 * <p>
+	 * The editmeta response uses an object keyed by field ID (unlike createmeta
+	 * which returns an array). This method normalises the response into the same
+	 * {@code List<Map<String, Object>>} format as
+	 * {@link #getCreateMetaFields(String, String, String, String)}.
+	 *
+	 * @param accessToken Jira OAuth access token
+	 * @param baseUrl     Jira API base URL including cloud ID
+	 * @param issueKey    Jira issue key (e.g. "RTJ-42")
+	 * @return list of maps with {@code fieldId}, {@code name}, {@code required},
+	 *         {@code schema}, and optionally {@code allowedValues}
+	 */
+	@SuppressWarnings("unchecked")
+	public static List<Map<String, Object>> getEditMetaFields(String accessToken, String baseUrl, String issueKey) {
+		final String FIELD_REQUIRED = "required";
+		final String FIELD_SCHEMA = "schema";
+		final String FIELD_ALLOWED_VALUES = "allowedValues";
+		final String FIELD_VALUE = "value";
+		try {
+			validateJiraContext(accessToken, baseUrl);
+			Map<String, String> headers = buildHeaders(accessToken);
+			String url = baseUrl + API_PATH_ISSUE + "/" + URLEncoder.encode(issueKey, StandardCharsets.UTF_8)
+					+ API_SUFFIX_EDITMETA;
+			String response = HttpHelperUtility.getRequest(url, headers, null, null, null);
+			JsonNode root = OBJECT_MAPPER.readTree(response);
+			JsonNode fieldsNode = root.path(FIELD_FIELDS);
+			List<Map<String, Object>> results = new ArrayList<>();
+			if (fieldsNode.isObject()) {
+				var it = fieldsNode.fields();
+				while (it.hasNext()) {
+					var entry = it.next();
+					String fieldId = entry.getKey();
+					JsonNode f = entry.getValue();
+					Map<String, Object> fieldEntry = new HashMap<>();
+					fieldEntry.put("fieldId", fieldId);
+					fieldEntry.put(FIELD_NAME, f.path(FIELD_NAME).asText(null));
+					fieldEntry.put(FIELD_REQUIRED, f.path(FIELD_REQUIRED).asBoolean(false));
+
+					JsonNode schemaNode = f.path(FIELD_SCHEMA);
+					if (schemaNode.isObject()) {
+						fieldEntry.put(FIELD_SCHEMA, OBJECT_MAPPER.convertValue(schemaNode, Map.class));
+					}
+
+					JsonNode allowedNode = f.path(FIELD_ALLOWED_VALUES);
+					if (allowedNode.isArray() && allowedNode.size() > 0) {
+						List<Map<String, Object>> allowedValues = new ArrayList<>();
+						for (JsonNode av : allowedNode) {
+							Map<String, Object> valEntry = new HashMap<>();
+							if (av.has(FIELD_ID)) {
+								valEntry.put(FIELD_ID, av.path(FIELD_ID).asText());
+							}
+							if (av.has(FIELD_NAME)) {
+								valEntry.put(FIELD_NAME, av.path(FIELD_NAME).asText());
+							}
+							if (av.has(FIELD_KEY)) {
+								valEntry.put(FIELD_KEY, av.path(FIELD_KEY).asText());
+							}
+							if (av.has(FIELD_VALUE)) {
+								valEntry.put(FIELD_VALUE, av.path(FIELD_VALUE).asText());
+							}
+							allowedValues.add(valEntry);
+						}
+						fieldEntry.put(FIELD_ALLOWED_VALUES, allowedValues);
+					}
+					results.add(fieldEntry);
+				}
+			}
+			return results;
+		} catch (SemossPixelException e) {
+			throw e;
+		} catch (Exception e) {
+			classLogger.error("Error fetching editmeta fields for issue '{}': {}", issueKey, e.getMessage(), e);
+			throw new SemossPixelException(
+					"Failed to get editable fields for issue '" + issueKey + "': " + e.getMessage());
+		}
 	}
 
 	private static String resolveProjectId(String urlBase, String accessToken, String projectIdOrKey) throws Exception {
@@ -1366,23 +1390,6 @@ public final class JiraHelper {
 		return resolvedId;
 	}
 
-	private static String applyTransitionByName(String urlBase, String accessToken,
-			String issueKey, String statusName) throws Exception {
-		String url = urlBase + API_PATH_ISSUE + "/" + issueKey + API_SUFFIX_TRANSITIONS;
-		Map<String, String> headers = buildHeaders(accessToken);
-		String getResponse = HttpHelperUtility.getRequest(url, headers, null, null, null);
-		JsonNode transitions = OBJECT_MAPPER.readTree(getResponse).path(FIELD_TRANSITIONS);
-		for (JsonNode t : transitions) {
-			if (t.path(FIELD_TO).path(FIELD_NAME).asText("").equalsIgnoreCase(statusName)) {
-				HttpHelperUtility.postRequestStringBody(url, headers,
-						GSON.toJson(Map.of(FIELD_TRANSITION, Map.of(FIELD_ID, t.path(FIELD_ID).asText()))),
-						ContentType.APPLICATION_JSON, null, null, null);
-				return statusName;
-			}
-		}
-		throw new SemossPixelException("Could not transition issue " + issueKey + " to '" + statusName + "'.");
-	}
-
 	private static Map<String, String> buildHeaders(String accessToken) {
 		Map<String, String> headers = new HashMap<>();
 		headers.put(HttpHeaders.AUTHORIZATION, "Bearer " + accessToken);
@@ -1390,6 +1397,78 @@ public final class JiraHelper {
 		headers.put(HttpHeaders.ACCEPT, ContentType.APPLICATION_JSON.getMimeType());
 		headers.put(HttpHeaders.USER_AGENT, "Semoss-Jira-Connector/1.0");
 		return headers;
+	}
+
+	/**
+	 * Transitions a Jira issue to the target status by finding the matching
+	 * workflow transition and executing it. Matches against the transition's
+	 * target status name (case-insensitive).
+	 *
+	 * @param accessToken  Jira OAuth access token
+	 * @param baseUrl      Jira API base URL including cloud ID
+	 * @param issueKey     issue key (for example, {@code PROJECT-123})
+	 * @param targetStatus desired status name (for example, {@code "Done"}, {@code "In Progress"})
+	 */
+	public static void transitionIssue(String accessToken, String baseUrl, String issueKey, String targetStatus) {
+		Map<String, String> headers = buildHeaders(accessToken);
+		try {
+			String url = baseUrl + API_PATH_ISSUE + "/" + URLEncoder.encode(issueKey, StandardCharsets.UTF_8)
+					+ API_SUFFIX_TRANSITIONS;
+			String response = HttpHelperUtility.getRequest(url, headers, null, null, null);
+			JsonNode root = OBJECT_MAPPER.readTree(response);
+
+			String transitionId = null;
+			for (JsonNode t : root.path(FIELD_TRANSITIONS)) {
+				String toStatusName = t.path(FIELD_TO).path(FIELD_NAME).asText();
+				if (targetStatus.equalsIgnoreCase(toStatusName)) {
+					transitionId = t.path(FIELD_ID).asText();
+					break;
+				}
+			}
+
+			if (transitionId == null) {
+				throw new SemossPixelException("No available transition to status '" + targetStatus
+						+ "' for issue '" + issueKey + "'. Use JiraGetTransitions to see valid target statuses.");
+			}
+
+			Map<String, Object> body = Map.of("transition", Map.of(FIELD_ID, transitionId));
+			HttpHelperUtility.postRequestStringBody(url, headers, GSON.toJson(body),
+					ContentType.APPLICATION_JSON, null, null, null);
+		} catch (SemossPixelException e) {
+			throw e;
+		} catch (Exception e) {
+			classLogger.error("Error transitioning issue '{}' to status '{}': {}", issueKey, targetStatus,
+					e.getMessage(), e);
+			throw new SemossPixelException("Failed to transition issue '" + issueKey + "' to status '"
+					+ targetStatus + "'. Error: " + e.getMessage());
+		}
+	}
+
+	/**
+	 * Transitions a Jira issue using an explicit transition ID.
+	 *
+	 * @param accessToken  Jira OAuth access token
+	 * @param baseUrl      Jira API base URL including cloud ID
+	 * @param issueKey     issue key (for example, {@code PROJECT-123})
+	 * @param transitionId the numeric transition ID
+	 */
+	public static void transitionIssueById(String accessToken, String baseUrl, String issueKey, String transitionId) {
+		try {
+			validateJiraContext(accessToken, baseUrl);
+			Map<String, String> headers = buildHeaders(accessToken);
+			String url = baseUrl + API_PATH_ISSUE + "/" + URLEncoder.encode(issueKey, StandardCharsets.UTF_8)
+					+ API_SUFFIX_TRANSITIONS;
+			Map<String, Object> body = Map.of("transition", Map.of(FIELD_ID, transitionId));
+			HttpHelperUtility.postRequestStringBody(url, headers, GSON.toJson(body),
+					ContentType.APPLICATION_JSON, null, null, null);
+		} catch (SemossPixelException e) {
+			throw e;
+		} catch (Exception e) {
+			classLogger.error("Error transitioning issue '{}' with transition id '{}': {}", issueKey, transitionId,
+					e.getMessage(), e);
+			throw new SemossPixelException("Transition with id '" + transitionId
+					+ "' failed for issue '" + issueKey + "'. Error: " + e.getMessage());
+		}
 	}
 
 	private static void validateJiraContext(String accessToken, String baseUrl) {
@@ -1401,39 +1480,44 @@ public final class JiraHelper {
 		}
 	}
 
-	private static void validateRequiredString(String value, String fieldName) {
-		if (value == null || value.trim().isEmpty()) {
-			throw new SemossPixelException(fieldName + " must not be empty.");
-		}
-	}
-
-	private static Map<String, Object> parseIssueSummary(JsonNode issue) {
-		JsonNode f = issue.path(FIELD_FIELDS);
-		Map<String, Object> ticket = new HashMap<>();
-		ticket.put(FIELD_ID, issue.path(FIELD_ID).asText());
-		ticket.put(FIELD_KEY, issue.path(FIELD_KEY).asText());
-		ticket.put(FIELD_SELF, issue.path(FIELD_SELF).asText());
-		ticket.put(FIELD_SUMMARY, f.path(FIELD_SUMMARY).asText());
-		ticket.put(FIELD_STATUS, f.path(FIELD_STATUS).path(FIELD_NAME).asText());
-		ticket.put(FIELD_PRIORITY, f.path(FIELD_PRIORITY).path(FIELD_NAME).asText());
-		ticket.put(FIELD_ISSUE_TYPE, f.path(FIELD_ISSUE_TYPE).path(FIELD_NAME).asText());
-		ticket.put(FIELD_ASSIGNEE, f.path(FIELD_ASSIGNEE).path(FIELD_DISPLAY_NAME).asText(DEFAULT_UNASSIGNED));
-		ticket.put(FIELD_ACCOUNT_ID, f.path(FIELD_ASSIGNEE).path(FIELD_ACCOUNT_ID).asText(""));
-		ticket.put(FIELD_DUE_DATE, f.path(FIELD_DUE_DATE).asText());
-		JsonNode labelsNode = f.path(FIELD_LABELS);
-		List<String> labels = new ArrayList<>();
-		if (labelsNode.isArray()) {
-			for (JsonNode lbl : labelsNode) {
-				labels.add(lbl.asText());
+	/**
+	 * Converts plain-text string values for fields that Jira requires in
+	 * Atlassian Document Format (ADF) into proper ADF structures.
+	 * Non-string values and fields not requiring ADF are passed through unchanged.
+	 */
+	private static Map<String, Object> convertAdfFields(Map<String, Object> fieldValues) {
+		Map<String, Object> converted = new HashMap<>(fieldValues);
+		for (Map.Entry<String, Object> entry : converted.entrySet()) {
+			if (entry.getValue() instanceof String && isAdfField(entry.getKey())) {
+				entry.setValue(buildAdfDocument((String) entry.getValue()));
 			}
 		}
-		ticket.put(FIELD_LABELS, labels);
+		return converted;
+	}
+
+	/**
+	 * Returns {@code true} if the given Jira field key requires Atlassian
+	 * Document Format (ADF) instead of plain text in the v3 REST API.
+	 */
+	private static boolean isAdfField(String fieldKey) {
+		return FIELD_DESCRIPTION.equals(fieldKey) || FIELD_ENVIRONMENT.equals(fieldKey);
+	}
+
+	@SuppressWarnings("unchecked")
+	private static Map<String, Object> parseIssueSummary(JsonNode issue) {
+		Map<String, Object> ticket = new HashMap<>();
+		ticket.put(FIELD_ID, issue.path(FIELD_ID).asText());
+		ticket.put(FIELD_JIRA_ID, issue.path(FIELD_KEY).asText());
+		JsonNode fieldsNode = issue.path(FIELD_FIELDS);
+		if (fieldsNode.isObject()) {
+			ticket.put(FIELD_FIELDS, OBJECT_MAPPER.convertValue(fieldsNode, Map.class));
+		}
 		return ticket;
 	}
 
 	/**
-	 * Extracts plain text from an Atlassian Document Format (ADF) JSON node.
-	 * Uses an iterative depth-first traversal to concatenate all text nodes.
+	 * Extracts plain text from an Atlassian Document Format (ADF) JSON node. Uses
+	 * an iterative depth-first traversal to concatenate all text nodes.
 	 *
 	 * @param adfNode the ADF root node (may be null, missing, or empty)
 	 * @return extracted plain text, or empty string if no text found
@@ -1461,13 +1545,16 @@ public final class JiraHelper {
 	}
 
 	/**
-	 * Builds an Atlassian Document Format (ADF) document from plain text.
-	 * Splits on double newlines for paragraphs and single newlines for hard breaks.
+	 * Builds an Atlassian Document Format (ADF) document from plain text. Splits on
+	 * double newlines for paragraphs and single newlines for hard breaks.
 	 *
 	 * @param text plain text input
 	 * @return ADF document structure as a Map
 	 */
 	static Map<String, Object> buildAdfDocument(String text) {
+		if (text == null || text.isEmpty()) {
+			text = " ";
+		}
 		final String doc = "doc";
 		final String version = "version";
 		final String paragraph = "paragraph";
@@ -1491,8 +1578,8 @@ public final class JiraHelper {
 			}
 		}
 		if (paragraphs.isEmpty()) {
-			paragraphs.add(Map.of(ADF_TYPE, paragraph, ADF_CONTENT,
-					List.of(Map.of(ADF_TYPE, ADF_TEXT, ADF_TEXT, text))));
+			paragraphs
+					.add(Map.of(ADF_TYPE, paragraph, ADF_CONTENT, List.of(Map.of(ADF_TYPE, ADF_TEXT, ADF_TEXT, text))));
 		}
 		return Map.of(ADF_TYPE, doc, version, 1, ADF_CONTENT, paragraphs);
 	}
